[workspace]
resolver = "2"
members = [
    "ssh-cipher",
    "ssh-derive",
    "ssh-encoding",
    "ssh-key",
    "ssh-protocol",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
ssh-cipher = { path = "./ssh-cipher" }
ssh-derive = { path = "./ssh-derive" }
ssh-encoding = { path = "./ssh-encoding" }
ssh-key = { path = "./ssh-key" }

crypto-primes = { git = "https://github.com/entropyxyz/crypto-primes" }
rsa = { git = "https://github.com/RustCrypto/RSA" }
