[package]
name = "ssh-encoding"
version = "0.3.0-pre.0"
description = """
Pure Rust implementation of SSH data type decoders/encoders as described
in RFC4251
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/SSH/tree/master/ssh-encoding"
repository = "https://github.com/RustCrypto/SSH"
categories = ["authentication", "cryptography", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "certificate", "key", "openssh", "ssh"]
readme = "README.md"
edition = "2021"
rust-version = "1.60"

[dependencies]
base64ct = { version = "1.4", optional = true }
bytes = { version = "1", optional = true, default-features = false }
pem-rfc7468 = { version = "1.0.0-rc.1", optional = true }
sha2 = { version = "=0.11.0-pre.4", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"

[features]
alloc = ["base64ct?/alloc", "pem-rfc7468?/alloc"]
std = ["alloc", "base64ct?/std", "pem-rfc7468?/std", "sha2?/std"]

base64 = ["dep:base64ct"]
bytes = ["alloc", "dep:bytes"]
pem = ["base64", "dep:pem-rfc7468"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
