[package]
name = "ssh-encoding"
version = "0.3.0-pre.1"
description = """
Pure Rust implementation of SSH data type decoders/encoders as described
in RFC4251
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/SSH/tree/master/ssh-encoding"
repository = "https://github.com/RustCrypto/SSH"
categories = ["authentication", "cryptography", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "certificate", "key", "openssh", "ssh"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
base64ct = { version = "1.7", optional = true }
bytes = { version = "1", optional = true, default-features = false }
digest = { version = "=0.11.0-pre.9", optional = true, default-features = false }
pem-rfc7468 = { version = "1.0.0-rc.2", optional = true }
ssh-derive = { version = "0.0.1-alpha", optional = true, path = "../ssh-derive" }
subtle = { version = "2", optional = true, default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

# TODO(tarcieri): migrate to `crypto-bigint`
bigint = { package = "num-bigint-dig", version = "0.8", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"

[features]
alloc = ["base64ct?/alloc", "pem-rfc7468?/alloc", "zeroize?/alloc"]

base64 = ["dep:base64ct"]
bigint = ["alloc", "zeroize", "dep:bigint"]
bytes = ["alloc", "dep:bytes"]
pem = ["base64", "dep:pem-rfc7468"]
derive = ["ssh-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
